--- a/tech-stack/index.html
+++ b/tech-stack/index.html
@@ -69,7 +69,8 @@
                                 <div class="tool-card">
                                     <div class="icon-container">
                                         <div class="icon-placeholder"></div>
-                                        <img src="${getFaviconUrl(tool.icon)}" alt="${tool.name}" class="tool-icon loading" onload="handleImageLoad(this)">
+                                        <img src="${getFaviconUrl(tool.icon)}" alt="${tool.name}" class="tool-icon loading" onload="handleImageLoad(this)" onerror="handleImageError(this)" data-retry-count="0" data-domain="${tool.icon}">
+
                                     </div>
                                     <span class="tool-name">${tool.name}</span>
                                     <div class="tooltip">${tool.usage}</div>
@@ -116,6 +117,25 @@
                 placeholder.classList.add('hidden');
             }
         }
+
+        function handleImageError(img) {
+            const toolName = img.alt;
+            const retryCount = parseInt(img.dataset.retryCount) || 0;
+            const maxRetries = 3;
+
+            if (retryCount < maxRetries) {
+                const nextRetry = retryCount + 1;
+                const delay = nextRetry * nextRetry * 1000; // 1s, 4s, 9s delays
+
+                img.dataset.retryCount = nextRetry;
+
+                setTimeout(() => {
+                    const domain = img.dataset.domain;
+                    img.src = getFaviconUrl(domain) + '&retry=' + nextRetry;
+                }, delay);
+            }
+        }
+
 
 
     </script>
