style: nicer collapsible

--- a/tech-stack/index.html
+++ b/tech-stack/index.html
@@ -45,69 +45,79 @@
                     return;
                 }
 
-                const categoryDiv = document.createElement('div');
-                categoryDiv.className = 'category-section';
+                const categorySection = document.createElement('section');
+                categorySection.className = 'category-section';
+                categorySection.setAttribute('aria-labelledby', `heading-${categoryId}`);
 
-                categoryDiv.innerHTML = `
-                    <button class="category-header"
-                            type="button"
-                            aria-expanded="true"
-                            aria-controls="content-${categoryId}"
-                            onclick="toggleCategory('${categoryId}')">
-                        <div class="category-icon">${category.icon}</div>
-                        <h2 class="category-title">${category.name}</h2>
-                        <div class="collapse-toggle" id="toggle-${categoryId}" aria-hidden="true">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="3" viewBox="0 0 18 3">
-                                <path fill="#565656" fill-rule="evenodd" d="M0 .5h18v2H0z"></path>
-                            </svg>
-                        </div>
-                    </button>
-                    <div class="category-content" id="content-${categoryId}">
+                // Create fixed header
+                const categoryHeader = document.createElement('div');
+                categoryHeader.className = 'category-header';
+                categoryHeader.id = `heading-${categoryId}`;
+                categoryHeader.setAttribute('role', 'button');
+                categoryHeader.setAttribute('tabindex', '0');
+                categoryHeader.setAttribute('aria-expanded', 'true');
+                categoryHeader.setAttribute('aria-controls', `content-${categoryId}`);
+                categoryHeader.innerHTML = `
+                    <div class="category-icon" aria-hidden="true">${category.icon}</div>
+                    <h2 class="category-title">${category.name}</h2>
+                    <div class="collapse-toggle" aria-hidden="true">
+                        <span class="toggle-icon"></span>
+                    </div>
+                `;
+
+                // Create collapsible content
+                const details = document.createElement('details');
+                details.open = true;
+                details.className = 'category-details';
+                details.id = `content-${categoryId}`;
+
+                details.innerHTML = `
+                    <summary style="display: none;"></summary>
+                    <div class="category-content">
                         <p class="category-description">${category.description}</p>
-                        <div class="tools-grid">
+                        <div class="tools-grid" role="list" aria-label="${category.name} tools">
                             ${categoryData.tools.map(tool => `
-                                <div class="tool-card">
+                                <article class="tool-card" role="listitem">
                                     <div class="icon-container">
-                                        <div class="icon-placeholder"></div>
-                                        <img src="${getFaviconUrl(tool.icon)}" alt="${tool.name}" class="tool-icon loading" onload="handleImageLoad(this)" onerror="handleImageError(this)" data-retry-count="0" data-domain="${tool.icon}">
-
+                                        <div class="icon-placeholder" aria-hidden="true"></div>
+                                        <img src="${getFaviconUrl(tool.icon)}" 
+                                             alt="${tool.name} logo" 
+                                             class="tool-icon loading" 
+                                             onload="handleImageLoad(this)" 
+                                             onerror="handleImageError(this)" 
+                                             data-retry-count="0" 
+                                             data-domain="${tool.icon}">
                                     </div>
-                                    <span class="tool-name">${tool.name}</span>
-                                    <div class="tooltip">${tool.usage}</div>
-                                </div>
+                                    <h3 class="tool-name">${tool.name}</h3>
+                                    <div class="tooltip" role="tooltip" aria-describedby="tool-${categoryId}-${tool.name.replace(/\s+/g, '-').toLowerCase()}">${tool.usage}</div>
+                                </article>
                             `).join('')}
                         </div>
                     </div>
                 `;
 
-                container.appendChild(categoryDiv);
+                // Add click event to entire header
+                const toggleSection = () => {
+                    const isOpen = details.open;
+                    details.open = !isOpen;
+                    categoryHeader.setAttribute('aria-expanded', (!isOpen).toString());
+                };
+
+                categoryHeader.addEventListener('click', toggleSection);
+                categoryHeader.addEventListener('keydown', (e) => {
+                    if (e.key === 'Enter' || e.key === ' ') {
+                        e.preventDefault();
+                        toggleSection();
+                    }
+                });
+
+                categorySection.appendChild(categoryHeader);
+                categorySection.appendChild(details);
+                container.appendChild(categorySection);
             });
 
         }
 
-        function toggleCategory(categoryId) {
-            const content = document.getElementById(`content-${categoryId}`);
-            const toggle = document.getElementById(`toggle-${categoryId}`);
-            const header = document.querySelector(`[aria-controls="content-${categoryId}"]`);
-
-            if (content.classList.contains('collapsed')) {
-                content.classList.remove('collapsed');
-                header.setAttribute('aria-expanded', 'true');
-                toggle.innerHTML = `
-                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="3" viewBox="0 0 18 3">
-                        <path fill="#565656" fill-rule="evenodd" d="M0 .5h18v2H0z"></path>
-                    </svg>
-                `;
-            } else {
-                content.classList.add('collapsed');
-                header.setAttribute('aria-expanded', 'false');
-                toggle.innerHTML = `
-                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="19" viewBox="0 0 18 19">
-                        <path fill="#565656" fill-rule="evenodd" d="M8 8.5v-8h2v8h8v2h-8v8H8v-8H0v-2h8z"></path>
-                    </svg>
-                `;
-            }
-        }
 
 
         function handleImageLoad(img) {
