feat: add open source section with repository loading functionality

--- a/index.html
+++ b/index.html
@@ -127,6 +127,12 @@
                 <div class="nav-title">Tech Stack</div>
                 <div class="nav-description">Browse our comprehensive technology stack and tools</div>
             </a>
+            
+            <a href="open-source/" class="nav-card">
+                <span class="nav-icon">⭐</span>
+                <div class="nav-title">Open Source</div>
+                <div class="nav-description">Discover our open source contributions and community projects</div>
+            </a>
         </div>
     </div>
 </body>
