feat: add back-link navigation to header in open source and tech stack pages

--- a/open-source/index.html
+++ b/open-source/index.html
@@ -12,6 +12,7 @@
 <body>
     <header class="header">
         <div class="header-content">
+            <a href="../" class="back-link">← Back to Home</a>
             <div class="header-text">
                 <h1>Shelf Open Source</h1>
                 <p>Explore our open source contributions and community projects with star counts and details.</p>
