--- a/tech-stack/index.html
+++ b/tech-stack/index.html
@@ -18,6 +18,7 @@
 <body>
     <header class="header">
         <div class="header-content">
+            <a href="../" class="back-link">← Back to Home</a>
             <div class="header-text">
                 <h1>Shelf Tech Stack</h1>
                 <p>Discover the tools and technologies used to build Shelf's innovative products and services.</p>
