--- a/open-source/index.html
+++ b/open-source/index.html
@@ -10,9 +10,12 @@
 </head>
 
 <body>
+    <div class="navigation-header">
+        <a href="../" class="back-link">← Back to Home</a>
+    </div>
     <header class="header">
         <div class="header-content">
-            <a href="../" class="back-link">← Back to Home</a>
+            <img src="https://static.shelf.io/images/logo/logo-black.svg" alt="Shelf" class="header-logo">
             <div class="header-text">
                 <h1>Shelf Open Source</h1>
                 <p>Explore our open source contributions and community projects with star counts and details.</p>
