--- a/tech-stack/index.html
+++ b/tech-stack/index.html
@@ -16,9 +16,12 @@
 </head>
 
 <body>
+    <div class="navigation-header">
+        <a href="../" class="back-link">← Back to Home</a>
+    </div>
     <header class="header">
         <div class="header-content">
-            <a href="../" class="back-link">← Back to Home</a>
+            <img src="https://static.shelf.io/images/logo/logo-black.svg" alt="Shelf" class="header-logo">
             <div class="header-text">
                 <h1>Shelf Tech Stack</h1>
                 <p>Discover the tools and technologies used to build Shelf's innovative products and services.</p>
