--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #FF8750 0%, #FF6E5A 25%, #8C91FF 50%, #4ABEF0 75%, #FF8750 100%);
             min-height: 100vh;
             display: flex;
             align-items: center;
