feat: update aider with claude code

--- a/tech-radar/index.html
+++ b/tech-radar/index.html
@@ -155,8 +155,8 @@
             },
             {
                 "quadrant": 0,
-                "ring": 1,
-                "label": "aider",
+                "ring": 2,
+                "label": "Claude Code",
                 "active": true,
                 "moved": 0
             },
@@ -381,6 +381,20 @@
                 "quadrant": 3,
                 "ring": 2,
                 "label": "Tailwind",
+                "active": false,
+                "moved": 1
+            },
+            {
+                "quadrant": 3,
+                "ring": 2,
+                "label": "Radix",
+                "active": true,
+                "moved": 1
+            },
+            {
+                "quadrant": 3,
+                "ring": 1,
+                "label": "Shadcn",
                 "active": false,
                 "moved": 1
             },
