--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 </head>
 <body>
 <div class="container">
-    <img src="https://static.shelf.io/images/logo/logo-black.svg" alt="Shelf" class="logo"/>
+    <img src="logo.svg" alt="Shelf" class="logo"/>
     <h1>Welcome</h1>
     <p class="subtitle">Choose where you'd like to navigate to explore our technology landscape</p>
 
