--- a/open-source/index.html
+++ b/open-source/index.html
@@ -15,7 +15,7 @@
     </div>
     <header class="header">
         <div class="header-content">
-            <img src="https://static.shelf.io/images/logo/logo-black.svg" alt="Shelf" class="header-logo">
+            <img src="../logo.svg" alt="Shelf" class="header-logo">
             <div class="header-text">
                 <h1>Shelf Open Source</h1>
                 <p>Explore our open source contributions and community projects with star counts and details.</p>
