--- a/tech-radar/index.html
+++ b/tech-radar/index.html
@@ -20,7 +20,7 @@
 
 <header class="header">
     <div class="header-content">
-        <img src="https://static.shelf.io/images/logo/logo-black.svg" alt="Shelf" class="header-logo">
+        <img src="../logo.svg" alt="Shelf" class="header-logo">
         <div class="header-text">
             <h1>Shelf Tech Radar</h1>
             <p>Explore our technology adoption timeline and strategic decisions across different categories.</p>
