--- a/tech-stack/index.html
+++ b/tech-stack/index.html
@@ -21,7 +21,7 @@
     </div>
     <header class="header">
         <div class="header-content">
-            <img src="https://static.shelf.io/images/logo/logo-black.svg" alt="Shelf" class="header-logo">
+            <img src="../logo.svg" alt="Shelf" class="header-logo">
             <div class="header-text">
                 <h1>Shelf Tech Stack</h1>
                 <p>Discover the tools and technologies used to build Shelf's innovative products and services.</p>
