fix: update ring assignments for GitHub Copilot and OpenAI Codex in radar entries

--- a/tech-radar/index.html
+++ b/tech-radar/index.html
@@ -67,10 +67,10 @@
             },
             {
                 "quadrant": 0,
-                "ring": 0,
+                "ring": 1,
                 "label": "GitHub Copilot",
                 "active": true,
-                "moved": 0
+                "moved": -1
             },
             {
                 "quadrant": 0,
@@ -81,7 +81,14 @@
             },
             {
                 "quadrant": 0,
-                "ring": 1,
+                "ring": 0,
+                "label": "OpenAI Codex",
+                "active": true,
+                "moved": 1
+            },
+            {
+                "quadrant": 0,
+                "ring": 0,
                 "label": "MCP",
                 "active": true,
                 "moved": 1
