--- a/tech-stack/index.html
+++ b/tech-stack/index.html
@@ -11,21 +11,9 @@
 
     <link rel="stylesheet" href="index.css" />
     <title>Shelf Tech Stack</title>
-    <script src="index.js"></script>
-    <script>
-      function getFaviconUrl(iconValue) {
-        if (
-          iconValue.startsWith("http://") ||
-          iconValue.startsWith("https://")
-        ) {
-          return iconValue;
-        }
-        return `https://www.google.com/s2/favicons?domain=${iconValue}&sz=128`;
-      }
-    </script>
   </head>
 
-  <body class="min-h-screen bg-slate-100 p-3 font-sans md:p-4">
+  <body class="min-h-screen bg-slate-100 font-sans">
     <div class="fixed left-5 top-5 z-[1000]">
       <a
         href="../"
@@ -54,172 +42,222 @@
       </div>
     </div>
 
-    <script>
-      renderTechStack();
+    <script type="module">
+      import { html, render } from "https://esm.run/uhtml@3";
+      import { CATEGORIES, pageData } from "./index.js";
 
-      function renderTechStack() {
-        const container = document.getElementById("tech-stack-content");
-        Object.entries(pageData.techStack).forEach(
-          ([categoryId, categoryData]) => {
-            const category = CATEGORIES.find((cat) => cat._id === categoryId);
+      const MINUS_PATH = "M4 8h10v2H4z";
+      const PLUS_PATH = "M8 4h2v4h4v2h-4v4H8v-4H4V8h4z";
 
-            if (!category) {
-              console.warn(
-                `Category with ID '${categoryId}' not found in CATEGORIES array`
-              );
-              return;
-            }
+      const state = {
+        expanded: new Set(CATEGORIES.map((category) => category._id)),
+        icons: new Map(),
+        retryTimers: new Map(),
+      };
 
-            const categoryDiv = document.createElement("div");
-            categoryDiv.className =
-              "relative z-10 bg-white ring-1 ring-white/70 overflow-visible";
+      const root = document.getElementById("tech-stack-content");
 
-            categoryDiv.innerHTML = `
-                    <button
-                        class="group flex w-full cursor-pointer items-center justify-between gap-4 bg-white px-6 py-5 text-left text-slate-900 transition hover:bg-slate-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-indigo-400 focus-visible:ring-offset-2 focus-visible:ring-offset-white"
-                        type="button"
-                        aria-expanded="true"
-                        aria-controls="content-${categoryId}"
-                        onclick="toggleCategory('${categoryId}')"
-                    >
-                        <div class="flex items-center gap-3">
-                            <div class="flex h-12 w-12 items-center justify-center text-2xl">${
-                              category.icon
-                            }</div>
-                            <div class="space-y-1">
-                                <h2 class="text-lg font-semibold text-slate-900 sm:text-xl">${
-                                  category.name
-                                }</h2>
-                                <p class="text-xs font-medium uppercase tracking-wide text-slate-400">${
-                                  category.description
-                                }</p>
-                            </div>
-                        </div>
-                        <div class="flex items-center text-slate-400">
-                            <div class="toggle-pill flex h-9 w-9 items-center justify-center rounded-full bg-slate-200/70 text-slate-600 shadow-inner ring-1 ring-white/60 transition group-hover:bg-slate-200/50" id="toggle-${categoryId}" aria-hidden="true">
-                                <svg class="toggle-icon" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18">
-                                    <path fill="#394150" fill-rule="evenodd" d="M4 8h10v2H4z"></path>
-                                </svg>
-                            </div>
-                        </div>
-                    </button>
-                    <div class="space-y-3 border-t border-slate-200 bg-white px-6 pb-6 pt-4" id="content-${categoryId}" style="position: relative; z-index: 0; overflow: visible;">
-                        <div class="grid grid-cols-1 gap-2 md:grid-cols-2 md:gap-3 lg:grid-cols-3">
-                            ${categoryData.tools
-                              .map(
-                                (tool) => `
-                                <article class="group relative z-30 flex cursor-pointer items-center gap-3 rounded-xl bg-white/95 px-3 py-2 shadow-sm ring-1 ring-transparent transition duration-200 hover:z-40 hover:-translate-y-0.5 hover:shadow-lg hover:ring-indigo-100/60">
-                                    <div class="relative flex h-14 w-14 items-center justify-center rounded-lg text-slate-600">
-                                        <div class="icon-placeholder absolute inset-0"></div>
-                                        <img
-                                            src="${getFaviconUrl(tool.icon)}"
-                                            alt="${tool.name}"
-                                            class="h-10 w-10 opacity-0 transition-opacity duration-300"
-                                            onload="handleImageLoad(this)"
-                                            onerror="handleImageError(this)"
-                                            data-retry-count="0"
-                                            data-domain="${tool.icon}"
-                                        >
-                                        <span class="icon-fallback hidden text-sm font-semibold uppercase text-indigo-500">${tool.name
-                                          .slice(0, 2)
-                                          .toUpperCase()}</span>
-                                    </div>
-                                    <div class="min-w-0 flex-1">
-                                        <h3 class="truncate text-sm font-semibold text-slate-900 sm:text-base">${
-                                          tool.name
-                                        }</h3>
-                                        <p class="mt-0.5 truncate text-xs text-slate-500 sm:text-sm">${
-                                          tool.usage
-                                        }</p>
-                                    </div>
-                                    <div class="pointer-events-none absolute left-1/2 top-full z-40 hidden w-56 -translate-x-1/2 translate-y-3 rounded-xl border border-slate-900/40 bg-slate-900/80 px-3 py-2 text-center text-xs font-medium text-slate-100 shadow-xl backdrop-blur group-hover:block md:w-64">
-                                        ${tool.usage}
-                                        <span class="absolute left-1/2 top-0 h-3 w-6 -translate-x-1/2 -translate-y-full border-x border-t border-slate-900/40 bg-slate-900/80 backdrop-blur" style="clip-path: polygon(50% 0, 100% 100%, 0 100%);"></span>
-                                    </div>
-                                </article>
-                            `
-                              )
-                              .join("")}
-                        </div>
-                    </div>
-                `;
-
-            container.appendChild(categoryDiv);
+      function getFaviconUrl(iconValue, retry = 0, cacheBust) {
+        if (iconValue.startsWith("http://") || iconValue.startsWith("https://")) {
+          if (!retry && !cacheBust) {
+            return iconValue;
           }
-        );
+          const separator = iconValue.includes("?") ? "&" : "?";
+          const params = [];
+          if (retry) {
+            params.push(`retry=${retry}`);
+          }
+          if (cacheBust) {
+            params.push(`cb=${cacheBust}`);
+          }
+          return `${iconValue}${separator}${params.join("&")}`;
+        }
+
+        const params = new URLSearchParams({ domain: iconValue, sz: "128" });
+        if (retry) {
+          params.set("retry", String(retry));
+        }
+        if (cacheBust) {
+          params.set("cb", String(cacheBust));
+        }
+        return `https://www.google.com/s2/favicons?${params.toString()}`;
       }
 
       function toggleCategory(categoryId) {
-        const content = document.getElementById(`content-${categoryId}`);
-        const toggle = document.getElementById(`toggle-${categoryId}`);
-        const header = document.querySelector(
-          `[aria-controls="content-${categoryId}"]`
-        );
-
-        if (content.classList.contains("hidden")) {
-          content.classList.remove("hidden");
-          header.setAttribute("aria-expanded", "true");
-          toggle.classList.add("shadow-inner", "bg-slate-200/70");
-          toggle.classList.remove("shadow-lg", "bg-slate-100");
-          toggle.innerHTML = `
-                    <svg class="toggle-icon" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18">
-                        <path fill="#394150" fill-rule="evenodd" d="M4 8h10v2H4z"></path>
-                    </svg>
-                `;
+        if (state.expanded.has(categoryId)) {
+          state.expanded.delete(categoryId);
         } else {
-          content.classList.add("hidden");
-          header.setAttribute("aria-expanded", "false");
-          toggle.classList.remove("shadow-inner", "bg-slate-200/70");
-          toggle.classList.add("shadow-lg", "bg-slate-100");
-          toggle.innerHTML = `
-                    <svg class="toggle-icon" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18">
-                        <path fill="#394150" fill-rule="evenodd" d="M8 4h2v4h4v2h-4v4H8v-4H4V8h4z"></path>
-                    </svg>
-                `;
+          state.expanded.add(categoryId);
         }
+        renderApp();
       }
 
-      function handleImageLoad(img) {
-        const placeholder =
-          img.parentElement.querySelector(".icon-placeholder");
-        const fallback = img.parentElement.querySelector(".icon-fallback");
-        img.classList.remove("hidden");
-        img.classList.remove("opacity-0");
-        if (placeholder) {
-          placeholder.classList.add("hidden");
+      function handleImageLoad(key) {
+        const current = state.icons.get(key);
+        if (current?.status === "loaded") {
+          return;
         }
-        if (fallback) {
-          fallback.classList.add("hidden");
+        if (state.retryTimers.has(key)) {
+          clearTimeout(state.retryTimers.get(key));
+          state.retryTimers.delete(key);
         }
+        state.icons.set(key, {
+          status: "loaded",
+          retry: current?.retry ?? 0,
+        });
+        renderApp();
       }
 
-      function handleImageError(img) {
-        const retryCount = parseInt(img.dataset.retryCount) || 0;
-        const maxRetries = 3;
+      function handleImageError(key, domain) {
+        const current = state.icons.get(key) ?? { status: "loading", retry: 0 };
+        const nextRetry = (current.retry ?? 0) + 1;
 
-        if (retryCount + 1 >= maxRetries) {
-          const placeholder = img.parentElement.querySelector(".icon-placeholder");
-          const fallback = img.parentElement.querySelector(".icon-fallback");
-          if (placeholder) {
-            placeholder.classList.add("hidden");
+        if (nextRetry >= 3) {
+          if (state.retryTimers.has(key)) {
+            clearTimeout(state.retryTimers.get(key));
+            state.retryTimers.delete(key);
           }
-          if (fallback) {
-            fallback.classList.remove("hidden");
-          }
-          img.classList.add("hidden");
+          state.icons.set(key, { status: "error", retry: nextRetry });
+          renderApp();
           return;
         }
 
-        const nextRetry = retryCount + 1;
-        const delay = nextRetry * nextRetry * 1000; // 1s, 4s, 9s delays
+        const delay = nextRetry * nextRetry * 1000;
+        if (state.retryTimers.has(key)) {
+          clearTimeout(state.retryTimers.get(key));
+        }
 
-        img.dataset.retryCount = nextRetry;
-
-        setTimeout(() => {
-          const domain = img.dataset.domain;
-          img.src = getFaviconUrl(domain) + "&retry=" + nextRetry;
+        const timeoutId = setTimeout(() => {
+          state.icons.set(key, {
+            status: "loading",
+            retry: nextRetry,
+            cacheBust: Date.now(),
+            domain,
+          });
+          state.retryTimers.delete(key);
+          renderApp();
         }, delay);
+
+        state.retryTimers.set(key, timeoutId);
       }
+
+      function renderApp() {
+        render(root, html`${CATEGORIES.map((category) => {
+          const categoryData = pageData.techStack[category._id];
+          if (!categoryData) {
+            return null;
+          }
+          const tools = Array.isArray(categoryData.tools)
+            ? categoryData.tools
+            : [];
+          const isExpanded = state.expanded.has(category._id);
+          const toggleClasses = [
+            "toggle-pill flex h-9 w-9 items-center justify-center rounded-full text-slate-600 ring-1 ring-white/60 transition group-hover:bg-slate-200/50",
+            isExpanded ? "bg-slate-200/70 shadow-inner" : "bg-slate-100 shadow-lg",
+          ].join(" ");
+
+          return html`
+            <section class="relative bg-white ring-1 ring-white/70 overflow-visible">
+              <button
+                class="group flex w-full cursor-pointer items-center justify-between gap-4 bg-white px-6 py-5 text-left text-slate-900 transition hover:bg-slate-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-indigo-400 focus-visible:ring-offset-2 focus-visible:ring-offset-white"
+                type="button"
+                aria-expanded=${String(isExpanded)}
+                aria-controls=${`content-${category._id}`}
+                onclick=${() => toggleCategory(category._id)}
+              >
+                <span class="flex items-center gap-3">
+                  <span class="flex h-12 w-12 items-center justify-center text-2xl">${
+                    category.icon
+                  }</span>
+                  <span class="space-y-1">
+                    <h2 class="text-lg font-semibold text-slate-900 sm:text-xl">${
+                      category.name
+                    }</h2>
+                    <p class="text-xs font-medium uppercase tracking-wide text-slate-400">${
+                      category.description
+                    }</p>
+                  </span>
+                </span>
+                <span class="flex items-center text-slate-400">
+                  <span class=${toggleClasses} aria-hidden="true">
+                    <svg
+                      class="toggle-icon"
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="18"
+                      height="18"
+                      viewBox="0 0 18 18"
+                    >
+                      <path
+                        fill="#394150"
+                        fill-rule="evenodd"
+                        d=${isExpanded ? MINUS_PATH : PLUS_PATH}
+                      ></path>
+                    </svg>
+                  </span>
+                </span>
+              </button>
+              <div
+                class=${[
+                  "space-y-3 border-t border-slate-200 bg-white px-6 pb-12 pt-4",
+                  isExpanded ? "" : "hidden",
+                ].join(" ")}
+                id=${`content-${category._id}`}
+                style="position: relative; z-index: 0; overflow: visible;"
+              >
+                <div class="grid grid-cols-1 gap-2 md:grid-cols-2 md:gap-3 lg:grid-cols-3">
+                  ${tools.map((tool) => renderTool(category._id, tool))}
+                </div>
+              </div>
+            </section>
+          `;
+        })}`);
+      }
+
+      function renderTool(categoryId, tool) {
+        const key = `${categoryId}:${tool.name}`;
+        const iconState = state.icons.get(key) ?? { status: "loading", retry: 0 };
+        const isLoaded = iconState.status === "loaded";
+        const isError = iconState.status === "error";
+        const placeholderHidden = isLoaded || isError;
+        const fallbackHidden = !isError;
+        const imageClasses = [
+          "h-10 w-10 transition-opacity duration-300",
+          isLoaded ? "opacity-100" : "opacity-0",
+        ].join(" ");
+        const src = getFaviconUrl(tool.icon, iconState.retry ?? 0, iconState.cacheBust);
+
+        return html`
+          <article class="group relative z-30 flex cursor-pointer items-center gap-3 rounded-xl bg-white/95 px-3 py-2 shadow-sm ring-1 ring-transparent transition duration-200 hover:z-40 hover:-translate-y-0.5 hover:shadow-lg hover:ring-indigo-100/60">
+            <span class="relative flex h-14 w-14 items-center justify-center rounded-lg text-slate-600">
+              <span class=${`icon-placeholder absolute inset-0${placeholderHidden ? " hidden" : ""}`}></span>
+              <img
+                class=${imageClasses}
+                src=${src}
+                alt=${tool.name}
+                loading="lazy"
+                onload=${() => handleImageLoad(key)}
+                onerror=${() => handleImageError(key, tool.icon)}
+              />
+              <span class=${`icon-fallback text-sm font-semibold uppercase text-indigo-500${fallbackHidden ? " hidden" : ""}`}>
+                ${tool.name.slice(0, 2).toUpperCase()}
+              </span>
+            </span>
+            <span class="min-w-0 flex-1">
+              <h3 class="truncate text-sm font-semibold text-slate-900 sm:text-base">${tool.name}</h3>
+              <p class="mt-0.5 truncate text-xs text-slate-500 sm:text-sm">${tool.usage}</p>
+            </span>
+            <span class="pointer-events-none absolute left-1/2 top-full z-40 hidden w-56 -translate-x-1/2 translate-y-3 rounded-xl border border-slate-900/40 bg-slate-900/80 px-3 py-2 text-center text-xs font-medium text-slate-100 shadow-xl backdrop-blur group-hover:block md:w-64">
+              ${tool.usage}
+              <span
+                class="absolute left-1/2 top-0 h-3 w-6 -translate-x-1/2 -translate-y-full border-x border-t border-slate-900/40 bg-slate-900/80 backdrop-blur"
+                style="clip-path: polygon(50% 0, 100% 100%, 0 100%);"
+              ></span>
+            </span>
+          </article>
+        `;
+      }
+
+      renderApp();
     </script>
   </body>
 </html>
