refactor: remove extra sections

--- a/tech-radar/index.html
+++ b/tech-radar/index.html
@@ -17,7 +17,7 @@
     </style>
     <style>
       body {
-        font-family: 'Source Sans Pro', arial, helvetica, sans-serif;
+        font-family: "Source Sans Pro", arial, helvetica, sans-serif;
         padding-bottom: 50px;
       }
       h3 {
@@ -55,7 +55,9 @@
       </a>
     </div>
 
-    <header class="sticky top-0 z-40 border-b border-slate-200 bg-white/95 backdrop-blur">
+    <header
+      class="sticky top-0 z-40 border-b border-slate-200 bg-white/95 backdrop-blur"
+    >
       <div class="mx-auto flex max-w-7xl items-center gap-4 px-6 py-6">
         <img src="../logo.svg" alt="Shelf" class="h-10 w-auto" />
         <div>
@@ -82,21 +84,23 @@
       <span id="tech-radar-title" class="sr-only">Shelf Tech Radar</span>
 
       <div class="mx-auto grid max-w-7xl gap-10 px-6 lg:grid-cols-2">
-        <section class="space-y-6 rounded-3xl border border-slate-200 bg-white p-8 shadow-sm">
+        <section
+          class="space-y-6 rounded-3xl border border-slate-200 bg-white p-8 shadow-sm"
+        >
           <h2 class="text-xl font-semibold tracking-tight">
             What is the Tech Radar?
           </h2>
           <p class="text-sm leading-6 text-slate-600">
             The Shelf Tech Radar is a list of technologies, complemented by an
-            assessment result, called <em>ring assignment</em>. We use four rings
-            with the following semantics:
+            assessment result, called <em>ring assignment</em>. We use four
+            rings with the following semantics:
           </p>
           <ul class="space-y-4 text-sm leading-6 text-slate-600">
             <li>
-              <strong>ADOPT</strong> &mdash; Technologies we have high confidence
-              in to serve our purpose, also in large scale. Technologies with a
-              usage culture in our Shelf production environment, low risk and
-              recommended to be widely used.
+              <strong>ADOPT</strong> &mdash; Technologies we have high
+              confidence in to serve our purpose, also in large scale.
+              Technologies with a usage culture in our Shelf production
+              environment, low risk and recommended to be widely used.
             </li>
             <li>
               <strong>TRIAL</strong> &mdash; Technologies that we have seen work
@@ -107,8 +111,8 @@
               knowledge and experiences.
             </li>
             <li>
-              <strong>ASSESS</strong> &mdash; Technologies that are promising and
-              have clear potential value-add for us; technologies worth to
+              <strong>ASSESS</strong> &mdash; Technologies that are promising
+              and have clear potential value-add for us; technologies worth to
               invest some research and prototyping efforts in to see if it has
               impact. ASSESS technologies have higher risks; they are often
               brand new and highly unproven in our organisation. You will find
@@ -126,15 +130,17 @@
           </ul>
         </section>
 
-        <section class="space-y-6 rounded-3xl border border-slate-200 bg-white p-8 shadow-sm">
+        <section
+          class="space-y-6 rounded-3xl border border-slate-200 bg-white p-8 shadow-sm"
+        >
           <div class="space-y-4">
             <h2 class="text-xl font-semibold tracking-tight">
               Our Technology Categories
             </h2>
             <ul class="space-y-3 text-sm leading-6 text-slate-600">
               <li>
-                <strong>AI/ML</strong> &mdash; Artificial Intelligence and Machine
-                Learning technologies and platforms.
+                <strong>AI/ML</strong> &mdash; Artificial Intelligence and
+                Machine Learning technologies and platforms.
               </li>
               <li>
                 <strong>Infrastructure</strong> &mdash; Cloud services and
@@ -172,74 +178,9 @@
               our engineering teams should pay attention to and use in their
               projects.
             </p>
-            <p class="text-sm leading-6 text-slate-600">
-              <em>
-                BTW, if you would like to create your own Tech Radar &mdash;
-                check out
-                <a
-                  href="https://github.com/zalando/tech-radar"
-                  class="font-semibold text-indigo-600 hover:text-indigo-500"
-                  target="_blank"
-                  rel="noreferrer"
-                  >open sourced the code</a
-                >
-                to generate this visualization.
-              </em>
-            </p>
-          </div>
-
-          <div class="space-y-3">
-            <h2 class="text-xl font-semibold tracking-tight">
-              More about Shelf
-            </h2>
-            <p class="text-sm leading-6 text-slate-600">
-              Check out more details about our tech stack
-              <a
-                href="https://stackshare.io/shelf/shelf"
-                class="font-semibold text-indigo-600 hover:text-indigo-500"
-                target="_blank"
-                rel="noreferrer"
-                >on StackShare</a
-              >.
-            </p>
-            <p class="text-sm leading-6 text-slate-600">
-              Check out our 35+ open-source repositories
-              <a
-                href="https://github.com/shelfio"
-                class="font-semibold text-indigo-600 hover:text-indigo-500"
-                target="_blank"
-                rel="noreferrer"
-                >on GitHub</a
-              >.
-            </p>
-            <p class="text-sm leading-6 text-slate-600">
-              Interested? Apply to work at Shelf!
-            </p>
-            <ul class="space-y-2 text-sm leading-6 text-indigo-600">
-              <li>
-                <a
-                  href="https://shelf.io/careers/"
-                  class="font-semibold hover:text-indigo-500"
-                  target="_blank"
-                  rel="noreferrer"
-                  >Careers Page</a
-                >
-              </li>
-              <li>
-                <a
-                  href="https://boards.greenhouse.io/shelf"
-                  class="font-semibold hover:text-indigo-500"
-                  target="_blank"
-                  rel="noreferrer"
-                  >See our open positions</a
-                >
-              </li>
-            </ul>
           </div>
         </section>
       </div>
     </main>
-
-
   </body>
 </html>
