chore: hard-code redirect

--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-<!DOCTYPE html><html lang="en"><head><meta charSet="UTF-8"/><meta http-equiv="refresh" content="0; url=https://shelf-engineering-portal.vercel.app/"/><title>Redirecting…</title><link rel="canonical" href="https://shelf-engineering-portal.vercel.app/"/><script>window.location.replace('https://shelf-engineering-portal.vercel.app/');</script></head><body><p>Redirecting to <a href="https://shelf-engineering-portal.vercel.app/">Shelf Engineering Portal</a>…</p></body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      http-equiv="refresh"
+      content="0; url=https://shelf-engineering-portal.vercel.app/"
+    />
+    <title>Redirecting…</title>
+    <link rel="canonical" href="https://shelf-engineering-portal.vercel.app/" />
+    <script>
+      window.location.replace("https://shelf-engineering-portal.vercel.app/");
+    </script>
+  </head>
+  <body>
+    <p>
+      Redirecting to
+      <a href="https://shelf-engineering-portal.vercel.app/"
+        >Shelf Engineering Portal</a
+      >…
+    </p>
+  </body>
+</html>
